--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=mediasofttask
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mediasoft
+spring.datasource.username=username
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
