add validation and ExceptionHandler for validation errors, fix ProductService and ProductController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=mediasofttask
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/mediasoft
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=1536212psp
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-drop (update)  every session create and drop db
