--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,10 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=1536212psp
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop (update)  every session create and drop db
-
-spring.profiles.active=local
