add javadoc for ProductService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create-drop (update)  every session create and drop db
 
-spring.profiles.active=local
+#spring.profiles.active=local
